--- a/index.html
+++ b/index.html
@@ -3,13 +3,40 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=DM+Mono:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <title>whack-a-mole</title>
   </head>
   <body>
     <div class="app">
-      <header></header>
-      <div class="main"></div>
+      <header>
+        <h1>Whack-a-Mr.Bump</h1>
+        <h3>Score: <span id="score">0</span></h3>
+        <button>Start!</button>
+      </header>
+      <div class="main">
+        <div class="field field1">
+          <div class="mrBump"></div>
+        </div>
+        <div class="field field2">
+          <div class="mrBump"></div>
+        </div>
+        <div class="field field3">
+          <div class="mrBump"></div>
+        </div>
+        <div class="field field4">
+          <div class="mrBump"></div>
+        </div>
+        <div class="field field5">
+          <div class="mrBump"></div>
+        </div>
+        <div class="field field6">
+          <div class="mrBump"></div>
+        </div>
+      </div>
     </div>
     <script src="app.js"></script>
   </body>
