function random tim, random field, start, timeout, out

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       <header>
         <h1>Whack-a-Mr.Bump</h1>
         <h3>Score: <span id="score">0</span></h3>
-        <button>Start!</button>
+        <button id="btn">Start!</button>
       </header>
       <div class="main">
         <div class="field field1">
