start game function done, need tiem to show+ time of game btn selection

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="app">
       <header>
         <h1>Whack-a-Mr.Bump</h1>
-        <h3>Score: <span id="score">0</span></h3>
+        <h3>Score: <span id="score"></span></h3>
         <button id="btn">Start!</button>
       </header>
       <div class="main">
