issue: current time is not updating

--- a/index.html
+++ b/index.html
@@ -14,7 +14,15 @@
     <div class="app">
       <header>
         <h1>Whack-a-Mr.Bump</h1>
-        <h3>Score: <span id="score"></span></h3>
+        <div class="head-div">
+          <span id="time-left">10:00</span>
+          <div class="btn-time-sel">
+            <button class="select-time" id="btn10">10 Sec</button>
+            <button class="select-time" id="btn15">15 Sec</button>
+            <button class="select-time" id="btn20">20 Sec</button>
+          </div>
+        </div>
+        <h3>Score: <span id="score">0</span></h3>
         <button id="btn">Start!</button>
       </header>
       <div class="main">
